<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Carrot Food</string>
    <string name="nav_header_subtitle">carrot_food@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_list">List</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_logOut">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_sign_up_link">
        <u>Or Sign Up here</u>
    </string>
    <string name="button_add_to_cart">Add To Cart</string>
    <string name="search_product">Tìm sản phẩm bạn muốn</string>
    <string name="menu_order">Order</string>
    <string name="total">Total:</string>
    <string name="Price">0 VND</string>
    <string name="place_order">Place Order</string>
    <string name="check_out">CHECK OUT</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="name">Name</string>
    <string name="order_date">Order Date</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="total_amount">Total Amount</string>
    <string name="status">Status</string>
    <string name="intro">Carrot Food sử dụng nguồn nguyên liệu tốt nhất thị trường, kết hợp với những đầu bếp hàng đầu vũ trụ!!!</string>
    <string name="welcome">Welcome to Carrot Food</string>
</resources>