<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_icon_list_food"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_icon_cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_Order"
            android:icon="@drawable/ic_icon_order"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_signOut"
            android:icon="@drawable/ic_baseline_directions_run_24"
            android:title="@string/menu_logOut" />
    </group>
</menu>