<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.myapplication.ui.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.myapplication.ui.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_Order"
        android:name="com.example.myapplication.ui.OrderFragment"
        android:label="Order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_signOut"
        android:name="com.example.myapplication.ui.LogOutFragment"
        android:label="@string/menu_logOut"
        tools:layout="@layout/fragment_log_out" />


</navigation>