<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_ordered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/tvCustomerName"
                        android:layout_width="335dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#673AB7"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tvOrderDate"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/order_date"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#673AB7"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tvDeliveryDate"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/delivery_date"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#673AB7"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tvTotalAmount"
                        android:layout_width="315dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total_amount"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#673AB7"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tvStatus"
                        android:layout_width="315dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:text="@string/status"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#673AB7"
                        android:textSize="13sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>