<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.CartFragment">

    <ListView
        android:id="@+id/lvOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Price"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnPlaceOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorAccent"
                android:shadowColor="@android:color/black"
                android:text="@string/place_order"
                android:textColor="@android:color/white"
                app:cornerRadius="4dp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>