<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_myevent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="4"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/tvItemName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/itemname"
                        android:layout_weight="0.75"
                        android:textSize="13sp"
                        />

                    <TextView
                        android:id="@+id/tvQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:text="@string/quantity"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="13sp"

                        />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Price"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tvTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="13sp" />

                    <CheckBox
                        android:id="@+id/chk_selectitem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.15"
                        android:background="#FFFFFF"
                        android:checked="false"
                        android:clickable="true" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>